samples/_failures_safe/1761177216_59bab6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de544aee.c: In function ‘main’:
./samples/SAFE/__tmp_de544aee.c:154:15: error: expected ‘;’ at end of input
  154 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_de544aee.c:154:9: error: expected declaration or statement at end of input
  154 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_de544aee.c:154:9: error: expected declaration or statement at end of input
